--- a/odh-notebook-controller/odh-notebook-controller/manager/manager.yaml
+++ b/odh-notebook-controller/odh-notebook-controller/manager/manager.yaml
@@ -18,10 +18,10 @@ spec:
       containers:
         - name: manager
           image: quay.io/opendatahub/odh-notebook-controller:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command:
             - /manager
-          args: ["--oauth-proxy-image", "registry.redhat.io/openshift4/ose-oauth-proxy:v4.10"]
+          args: ["--oauth-proxy-image", "docker.io/lhjlhlkj/ose-oauth-proxy:v4.8"]
           securityContext:
             allowPrivilegeEscalation: false
           ports:
