--- a/odh-notebook-controller/odh-notebook-controller/manager/manager.yaml
+++ b/odh-notebook-controller/odh-notebook-controller/manager/manager.yaml
@@ -25,7 +25,7 @@ spec:
           imagePullPolicy: Always
           command:
             - /manager
-          args: ["--oauth-proxy-image", "registry.redhat.io/openshift4/ose-oauth-proxy:v4.10"]
+          args: ["--oauth-proxy-image", "docker.io/lhjlhlkj/ose-oauth-proxy:v4.10"]
           securityContext:
             allowPrivilegeEscalation: false
           ports:
