--- a/odh-dashboard/base/kustomization.yaml
+++ b/odh-dashboard/base/kustomization.yaml
@@ -27,5 +27,5 @@ images:
   newName: quay.io/opendatahub/odh-dashboard
   newTag: v2.9.3
 - name: oauth-proxy
-  newName: registry.redhat.io/openshift4/ose-oauth-proxy
+  newName: docker.io/lhjlhlkj/ose-oauth-proxy
   newTag: v4.8
